luxtensor/crates/luxtensor-oracle/errors3.txt
cargo :     Checking luxtensor-oracle v0.1.0 (D:
\venera\cardano\moderntensor\moderntensor\luxten
sor\crates\luxtensor-oracle)
At line:1 char:1
+ cargo check 2>&1 | Out-File -FilePath 
errors3.txt -Encoding utf8; Get ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   
     Checking lu...xtensor-oracle):String) [],  
   RemoteException
    + FullyQualifiedErrorId : NativeCommandErro 
   r
 
warning: unused import: `StreamExt`
 --> 
crates\luxtensor-oracle\src\listener.rs:7:23
  |
7 | use futures::{Stream, StreamExt};
  |                       ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused import: `error`
 --> 
crates\luxtensor-oracle\src\submitter.rs:6:21
  |
6 | use tracing::{info, error};
  |                     ^^^^^

error[E0515]: cannot return value referencing 
temporary value
  --> 
crates\luxtensor-oracle\src\listener.rs:49:9
   |
41 |           let events = self.contract
   |  ______________________-
42 | |             
.event::<AirequestCreatedFilter>()
   | |__________________________________________
____- temporary value created here
...
49 |           Ok(Box::pin(events))
   |           ^^^^^^^^^^^^^^^^^^^^ returns a 
value referencing data owned by the current 
function

warning: unused variable: `input_data`
  --> 
crates\luxtensor-oracle\src\processor.rs:21:9
   |
21 |         input_data: Bytes,
   |         ^^^^^^^^^^ help: if this is 
intentional, prefix it with an underscore: 
`_input_data`
   |
   = note: `#[warn(unused_variables)]` (part of 
`#[warn(unused)]`) on by default

For more information about this error, try 
`rustc --explain E0515`.
warning: `luxtensor-oracle` (lib) generated 3 
warnings
error: could not compile `luxtensor-oracle` 
(lib) due to 1 previous error; 3 warnings 
emitted
